--- a/2025-09-03-basic-baml/pyproject.toml
+++ b/2025-09-03-basic-baml/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "baml-py>=0.206.1",
+    "pydantic>=2.11.7",
+    "typing-extensions>=4.15.0",
 ]
