Add baml_client and target directories to gitignore
- Ignore generated BAML client code (baml_client/)
- Ignore Rust build artifacts (target/)
- Ignore Python cache files (__pycache__, *.pyc, .pytest_cache/)
- Keep repository clean of generated and build files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 # SpecStory explanation file
 /.what-is-this.md
+
+# BAML generated clients and build artifacts
+**/baml_client/
+**/target/
+**/__pycache__/
+**/*.pyc
+**/.pytest_cache/
